# Virtual-Mouse

./: .gitignore  .pre-commit-config.yaml  README.md  Tests.py  Virtual_Mouse.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  engine.py  main.py
app/controllers/: __init__.py  mouse.py
app/core/: __init__.py  config.py  logging.py
app/gestures/: __init__.py  detector.py  state_machine.py
app/tracking/: __init__.py  geometry.py  hand_tracker.py
tests/: conftest.py  test_config.py  test_detector.py  test_engine.py  test_geometry.py  test_main.py  test_state_machine.py
